<resources>
    <string name="app_name">Marvel Database</string>
    <string name="loading_error_message">We couldn\'t load your query. Please check your internet connection and try again.</string>
    <string name="str_next">Next</string>
    <string name="str_previous">Previous</string>
    <string name="str_type_to_filter">Type to filter…</string>
    <string name="str_filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="pref_order_key">pref_order_key</string>
    <string name="pref_order_title">Results order</string>
    <string name="pref_order_default">name</string>
    <string name="pref_limit_key">pref_limit_key</string>
    <string name="pref_limit_title">Results per page</string>
    <string name="pref_limit_default">20</string>

</resources>
