<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="@string/pref_order_key"
        android:title="@string/pref_order_title"
        android:dialogTitle="@string/pref_order_title"
        android:summary="%s"
        android:entries="@array/pref_order_entries"
        android:entryValues="@array/pref_order_values"
        android:defaultValue="@string/pref_order_default" />
    <ListPreference
        android:key="@string/pref_limit_key"
        android:title="@string/pref_limit_title"
        android:dialogTitle="@string/pref_limit_title"
        android:summary="%s"
        android:entries="@array/pref_limit_entries"
        android:entryValues="@array/pref_limit_values"
        android:defaultValue="@string/pref_limit_default" />






</PreferenceScreen>